# Computer-Vision-Projects

./: .gitignore  README.md
Coursera/: Topics.txt
Final Project/: BasketballDribbleCoach_Proposal.docx  Basketball_Dribble_Idea.txt  UI_Mock.docx
Final Project/Basketball_Dribble_Coach_Website/: Website.html
Homework/Homework1/: e1_page118.m  e1_page84.m  e2_page84.m  e3_page84.m  e4_page84.m  e5_page84.m  e6_page119.m  e6_page84.m  e7_page84.m  e8_page84.m  myplot1.m  myplot2.m  myplot3.m  myplot3a.m  myplot4.m  myplot5.m
Homework/Homework2/HW2_2017/: hw2.html
Homework/Homework2/HW2_2018/HW2/: hw2.html
Homework/Homework2/HW2_2019/HW2/: hw2.html
Homework/Homework2/HW2_2020/HW2/: hw2.html
Homework/Homework3/HW3_2016/: hw3.adoc  hw3.html
Homework/Homework3/HW3_2017/template/: hw5.html
Homework/Homework3/HW3_2018/HW3/: hw3.html
Homework/Homework3/HW3_2019/HW3/: hw3.html
Homework/Homework3/HW3_2020/HW3/: hw3.html
Homework/Homework3/HW3_extra_videos_2019/HW3_extra_videos/: L1_clip3_15s.m4v  L2_clip2_7s.m4v  L5_clip2_6s.m4v
Homework/Homework4/HW4_2017/HW3/: hw3.html
Homework/Homework4/HW4_2017/__MACOSX/: ._HW3
Homework/Homework4/HW4_2019/HW4/: hw4.html
Homework/Homework4/HW4_2020/HW4/: hw4.html
Homework/Homework5/HW5_2018/HW5/: hw5.html
Homework/Homework5/HW6_2019/HW6/: hw6.html
Homework/Matlab/HW2/HW2_2017/: p1_matlab_code.m
Homework/Matlab/HW2/HW2_2018/: p1_matlab_code.m
Homework/Matlab/HW2/HW2_2020/: p1b_matlab_code.m  p2a_matlab_code.m  p2c_matlab_code.m
Homework/Matlab/HW2_2018/: p1_matlab_code.m
Homework/Matlab/HW2_2019/: p1_matlab_code.m
Homework/Matlab/HW2_2020/: p1a_matlab_result.m  p1b_matlab_code.m  p2a_matlab_code.m  p2b_matlab_code.m
Homework/Matlab/HW3/HW3_2016/: p1_matlab_code.m
Homework/Matlab/HW3/HW3_2020/: p2a_matlab_code.m
Homework/Matlab/HW4/HW4_2018/: generate_siren.m
Homework/Matlab/HW4_2017/Part1/: p1_matlab_code.m
Homework/Matlab/HW4_2017/Part3B/: p3b_matlab_code.m
Homework/Matlab/HW4_2017/Part4/: p4_matlab_code.m
Homework/Matlab/HW4_2018/: generate_wave.m  p4_matlab_code.m  p5_matlab_code.m
Homework/Matlab/HW4_2019/P4/: p4_matlab_code.m
Homework/Matlab/HW4_2019/P5/: p5_record_audio_samples.m
Homework/Matlab/HW4_2020/: Test.m  p2a_matlab_code.m  p3a_matlab_code.m  p3b_matlab_code.m  p4_matlab_code.m  p5_matlab_code.m  p5_matlab_helper.m  p6_matlab_code.m
Homework/NanoHMM/Python/: backward_tester.py  forward_tester.py  nanohmm.py  p10_train_hmms.py  p1_bf_forward_algorithm.py  p1_python_code.py  p2_forward_algorithm.py  p2_python_code.py  p4_backward_algorithm.py  p4_python_code.py  p7_likelihood_verification.py  p8_match_sequence_hmms.py  p9_nanohmm_match_sequences.py
Homework/Qt/OpenCV/: CMakeLists.txt  main.cpp
Homework/Qt/OpenCV/Final_Project/: color_filter_finder.cpp  drillwindow.cpp  drillwindow.h  drillwindow.ui  experiment.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  video_capture.cpp
Homework/Qt/OpenCV/HW2_2013/: p1_opencv_code.cpp  p2_opencv_code.cpp  trackbar_example.cpp
Homework/Qt/OpenCV/HW2_2017/: p1_matlab_code.cpp  p3_opencv_code.cpp
Homework/Qt/OpenCV/HW2_2018/: chess_piece_template_finder.cpp  p1_opencv_code.cpp  p2_opencv_code.cpp  p3_opencv_code.cpp  p3a_opencv_code.cpp  p3b_opencv_code.cpp  p3c_opencv_code.cpp
Homework/Qt/OpenCV/HW2_2019/: p10_opencv_code.cpp  p1_opencv_code.cpp  p2_opencv_code.cpp  p3_opencv_code.cpp  p4_opencv_code.cpp  p5_opencv_code.cpp  p6_opencv_code.cpp  p7_opencv_code.cpp  p8_opencv_code.cpp  p9_opencv_code.cpp
Homework/Qt/OpenCV/HW2_2020/: chess_piece_template_finder.cpp  p1_opencv_code.cpp  p1a_opencv_code.cpp  p1b_opencv_code.cpp  p2a_opencv_code.cpp  p2b_opencv_code.cpp  p2c_opencv_code.cpp  p3a_opencv_code.cpp  p3b_opencv_code.cpp  p4a_opencv_code.cpp  p4b_opencv_code.cpp  p5a_opencv_code.cpp  p5b_opencv_code.cpp
Homework/Qt/OpenCV/HW3_2017/: color_detector.cpp  hw4_opencv_code.cpp  image_inspector.cpp  p1a_opencv_code.cpp  p1b_opencv_code.cpp  p2_opencv_code.cpp  p2b_opencv_code.cpp  p2c_opencv_code.cpp  p3_opencv_code.cpp
Homework/Qt/OpenCV/HW3_2018/: create_pacmman_template.cpp  p1a_opencv_code.cpp  p1b_opencv_code.cpp  p2a_opencv_code.cpp  p2b_opencv_code.cpp  p3a_opencv_code.cpp  p3b_opencv_code.cpp  p4_opencv_code.cpp
Homework/Qt/OpenCV/HW3_2019/: create_display_templates.cpp  p1a_opencv_code.cpp  p1b_opencv_code.cpp  p1c_opencv_code.cpp  p1d_opencv_code.cpp  p2a_opencv_code.cpp  p2b_opencv_code.cpp  p2c_opencv_code.cpp
Homework/Qt/OpenCV/HW3_2020/: create_mario_template.cpp  p1a_opencv_code.cpp  p1b_opencv_code.cpp  p1c_opencv_code.cpp  p2a_opencv_code.cpp  p2b_opencv_code.cpp  p2c_opencv_code.cpp  p3_opencv_code.cpp
Homework/Qt/OpenCV/HW5_2020/: nanohmm.c  p10_training_nanohmm.c
Homework/Qt/OpenCV/OpenCV_Course/: Detection_Tracking.cpp  assignment3.cpp  blemish_removal.cpp  chroma_keying.cpp  document_scanner.cpp  quiz1.cpp  selfie_app.cpp  skin_smoothing.cpp  submission.cpp
OpenCV_ComputerVisionI_Course/: README.md
OpenCV_ComputerVisionI_Course/mmorth_Assignment2/: CMakeLists.txt  README.txt  submission.cpp
OpenCV_ComputerVisionI_Course/mmorth_Assignment3/: submission.cpp
OpenCV_ComputerVisionI_Course/mmorth_Assignment4/: Structuring-Element-Assignment.cpp
OpenCV_ComputerVisionI_Course/mmorth_Assignment5/: Coin-Detection-Assignment_PartA.cpp  Coin-Detection-Assignment_PartAB_Draft.cpp  Coin-Detection-Assignment_Submission1.cpp
OpenCV_ComputerVisionI_Course/mmorth_Assignment6/: cvtColor-Assignment.cpp  cvtColor-Assignment.ipynb
OpenCV_ComputerVisionI_Course/mmorth_Assignment7/: Autofocus-assignment.cpp  Autofocus-assignment.ipynb
OpenCV_ComputerVisionI_Course/mmorth_Project1/: Instagram_filters.cpp  Instagram_filters.ipynb
OpenCV_ComputerVisionI_Course/mmorth_Project1/Blemish_removal/: README.txt  submission.cpp
OpenCV_ComputerVisionI_Course/mmorth_Project1/Chroma_keying/: README.txt  submission.cpp
OpenCV_ComputerVisionI_Course/mmorth_Project3/: README.txt  submission.cpp
OpenCV_ComputerVisionI_Course/mmorth_Project4/: Detection_Tracking.cpp
(+105 files in other folders)
